# MMCG

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
data/bunny/data/: README  bun.conf  bun.conf~
data/bunny/reconstruction/: README
data/sponza/: sponza.mtl
include/: App.h  Camera.h  ShaderProgram.h  Texture.h  common.h  glError.h  texture.h
include/Models/: ImportScene.h  Material.h  Mesh.h  Texture.h
include/Simulation/: Cloth.h  PointMass.h  Spring.h
shaders/: fragment.glsl  fragmentDepth.glsl  fragmentPhong.glsl  fragmentPointDepth.glsl  fragmentQuad.glsl  fragmentQuadColor.glsl  fragmentQuadDepth.glsl  geometryPointDepth.glsl  vertex.glsl  vertexDepth.glsl  vertexLightSource_ins.glsl  vertexPhong.glsl  vertexPhong_ins.glsl  vertexPointDepth.glsl
src/: App.cpp  Camera.cpp  ShaderProgram.cpp  Texture.cpp  glError.cpp  main.cpp  texture.cpp
src/Models/: ImportScene.cpp  Material.cpp  Mesh.cpp  Texture.cpp
src/Simulation/: Cloth.cpp
